Wired up json file to angular template for employee profiles. Added default user background image.

--- a/css/style.css
+++ b/css/style.css
@@ -356,7 +356,7 @@ section#aboutPageContent figure.portrait.erik {
 }
 
 section#aboutPageContent figure.portrait.default {
-	background-color: #333;
+	background-image: url("../img/default-user.png");
 }
 
 section#aboutPageContent > .page-wrap > div.row > p {
