--- a/css/style.css
+++ b/css/style.css
@@ -186,16 +186,19 @@ figure#headerIcon {
 	max-width: 1440px;
 }
 
-article.client-design-services,
-div.row {
+div.row,
+article.client-design-services {
 	display: -webkit-flex;
+	display: -ms-flexbox;
 	display: flex;
 	-webkit-flex-flow: row wrap;
-	flex-flow: wrap;
+}
+
+div.row {
 	-webkit-align-content: flex-start;
 	align-content: flex-start;
 	-webkit-justify-content: flex-start;
-	justify-content: flex-start;
+	justify-content: flex-start;	
 }
 
 div#contentSection > section {
@@ -351,7 +354,7 @@ section#companyProfile article.client-design-services > h2 {
 }
 
 section#companyProfile article.client-design-services > div.row {
-	max-width: 50%;
+	width: 50%;
 }
 
 /* ------------------  Contact Container ---------------------------------- */
