--- a/css/style.css
+++ b/css/style.css
@@ -189,17 +189,15 @@ figure#headerIcon {
 div.row,
 article.client-design-services {
 	display: -webkit-flex;
-	display: -ms-flexbox;
 	display: flex;
 	-webkit-flex-flow: row wrap;
-}
-
-div.row {
+	flex-flow: wrap;
 	-webkit-align-content: flex-start;
 	align-content: flex-start;
 	-webkit-justify-content: flex-start;
-	justify-content: flex-start;	
+	justify-content: flex-start;
 }
+
 
 div#contentSection > section {
 	height: 100%;
@@ -761,7 +759,7 @@ footer p.copy-footer {
 	}
 
 	section#companyProfile article.client-design-services > div.row {
-		max-width: 100%;
+		width: 100%;
 	}
 }
 
