--- a/css/style.css
+++ b/css/style.css
@@ -244,6 +244,10 @@ div#contentSection > section {
 	padding: 2em;
 }
 
+article.in-house-projects h2 {
+	padding-top: 0;
+}
+
 /* -------------------- ABOUT PAGE ------------------------------------------ */
 
 section#aboutPageContent .profileBox {
