Added declaration to keep layout intact below 500px, Norgren Designs title was breaking into new line.

--- a/css/style.css
+++ b/css/style.css
@@ -782,6 +782,10 @@ footer p.copy-footer {
 		width: 100%;
 	}
 
+	div#logo-wrap h1 {
+		display: none;
+	}
+
 	section#aboutPageContent .profileBox {
 		max-width: 49%;
 	}
