--- a/css/style.css
+++ b/css/style.css
@@ -469,7 +469,9 @@ button#send[disabled="disabled"] {
 @media
 only screen and (-webkit-min-device-pixel-ratio: 1),
 only screen and (min--moz-device-pixel-ratio: 1),
-only screen and (min-device-pixel-ratio: 1) {
+only screen and (min-device-pixel-ratio: 1),
+only screen and (min-resolution: 96dpi),
+only screen and (min-resolution: 1dppx) {
 	#nd div.background-array figure.bolt {
 		background-image: url("../img/array_bolt.jpg");
 	}
