--- a/views/header.html
+++ b/views/header.html
@@ -7,10 +7,10 @@
     </div>
     <nav>
       <ul>
-        <li><a href='#' class='active'>Home</a></li>
-        <li><a href='#'>About</a></li>
-        <li><a href='#'>Services</a></li>
-        <li><a href='#'>Contact</a></li>
+        <li><a href='/main' class='active'>Home</a></li>
+        <li><a href='/about'>About</a></li>
+        <li><a href='/services'>Services</a></li>
+        <li><a href='/contact'>Contact</a></li>
       </ul>
     </nav>
     <button id='mobileNavBtn'>
@@ -25,10 +25,10 @@
    <div id='mobileNav'>
      <nav>
        <ul>
-         <li><a href='#' class='active'>Home</a></li>
-         <li><a href='#'>About</a></li>
-         <li><a href='#'>Services</a></li>
-         <li><a href='#'>Contact</a></li>
+         <li><a href='/main' class='active'>Home</a></li>
+         <li><a href='/about'>About</a></li>
+         <li><a href='/services'>Services</a></li>
+         <li><a href='/contact'>Contact</a></li>
        </ul>
      </nav>
    </div>
