added footer include

--- a/views/about.html
+++ b/views/about.html
@@ -1,5 +1,5 @@
 <section id='companyPageContent'>
-    <section id="companyProfile" ng-controller="servicesCtrl">
+    <section id="companyProfile">
       <article class="client-design-services">
         <h2>Client Design Services</h2>
         <div class="row" ng-repeat="category in services">
