--- a/views/contact.html
+++ b/views/contact.html
@@ -1,5 +1,5 @@
 <section id='contactPageContent'>
-  <div id="contactContainer" ng-controller="formCtrl">
+  <div id="contactContainer">
     <form action="process.php" method="post" name="ndForm" novalidate ng-submit="addUser( newUser )" id="contact-form">
       <h3>Have a project? Need expert&nbsp;advice? Contact&nbsp;us.</h3>
       <div id="nameWrap">
