--- a/views/header.html
+++ b/views/header.html
@@ -1,6 +1,6 @@
   <div id="desk-nav">
     <div id='logo-wrap' class='center'>
-     <a href='/' class='homeBtn'>
+     <a href='/main' class='homeBtn'>
         <figure id='headerIcon' class='logo'></figure>
         <h1>Norgren Designs</h1>
       </a>
