--- a/views/main.html
+++ b/views/main.html
@@ -1,4 +1,4 @@
-<section id='homePageContent' class="show" ng-controller="homeCtrl">
+<section id='homePageContent' class="show">
   <div ng-repeat="item in home">
     <h2>{{item.heading}}</h2>
     <p>{{item.content}}</p>
