--- a/views/services.html
+++ b/views/services.html
@@ -1,5 +1,5 @@
 <section id='aboutPageContent'>
-  <div class="page-wrap" ng-controller="employeeCtrl">
+  <div class="page-wrap">
 
     <div class="row" ng-repeat="employee in employees">
       <div class="profileBox">
