Updated json file, created controller file and updated index.

--- a/views/about.html
+++ b/views/about.html
@@ -2,7 +2,7 @@
     <section id="companyProfile">
       <article class="client-design-services">
         <h2>Client Design Services</h2>
-        <div class="row" ng-repeat="category in services">
+        <div class="row" ng-repeat="category in data.services">
           <h3>{{category.title}}</h3>
           <ul>
             <li ng-repeat="item in category.items">{{item}}</li>
