--- a/views/main.html
+++ b/views/main.html
@@ -1,5 +1,5 @@
 <section id='homePageContent' class="show">
-  <div ng-repeat="item in home">
+  <div ng-repeat="item in data.home">
     <h2>{{item.heading}}</h2>
     <p>{{item.content}}</p>
   </div>
