--- a/views/services.html
+++ b/views/services.html
@@ -1,7 +1,7 @@
 <section id='aboutPageContent'>
   <div class="page-wrap">
 
-    <div class="row" ng-repeat="employee in employees">
+    <div class="row" ng-repeat="employee in data.employees">
       <div class="profileBox">
         <figure class="portrait" ng-class="employee.class"></figure>
         <div class="employeeDetails">
