Troubleshooting a bit of the routing and getting everything hooked up.

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html ng-app="ndApp">
+<html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
 
-    <base href="/">
+    <base href="/main">
     <title>Norgren Designs</title>
 
     <!-- JS -- >
@@ -21,7 +21,7 @@
 
 </head>
 
-<body ng-controller="ndCtrl">
+<body ng-app="ndApp" ng-controller="ndCtrl">
 
   <header ng-include="'views/header.html'" id="globalHeader"></header>
 
