Slowly but surely piecing things together. Updated public/ files and resolved the routes requirement in the server.js file.

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -12,6 +12,8 @@
     <script src="libs/angular-route/angular-route.min.js"></script>
 
     <!-- controllers -->
+    <script src="controllers/ndCtrl.js"></script>
+    <script src="controllers/homeCtrl.js"></script>
     <script src="js/appRoutes.js"></script>
     <script src="js/app.js"></script>
     <script src="controllers/ndCtrl.js"></script>
