--- a/public/views/main.html
+++ b/public/views/main.html
@@ -1,7 +1,3 @@
 <section id='homePageContent' class="show">
-  <div ng-repeat="item in data.home">
-    <h2>{{item.heading}}</h2>
-    <p>{{item.content}}</p>
-  </div>
-  <h2>Our Motto: Creativity, Quantified.</h2>
+  <div>{{tagline}}</div>
 </section>
