--- a/public/views/index.html
+++ b/public/views/index.html
@@ -7,23 +7,24 @@
     <base href="/main">
     <title>Norgren Designs</title>
 
-    <!-- JS -- >
+    <!-- libraries -->
     <script src="libs/angular/angular.min.js"></script>
     <script src="libs/angular-route/angular-route.min.js"></script>
 
     <!-- controllers -->
-    <script src="controllers/ndCtrl.js"></script>
-    <script src="controllers/homeCtrl.js"></script>
+    <script src="js/controllers/MainCtrl.js"></script>
+    <script src="js/controllers/HomeCtrl.js"></script>
+
+    <!-- application scripts -->
     <script src="js/appRoutes.js"></script>
     <script src="js/app.js"></script>
-    <script src="controllers/ndCtrl.js"></script>
 
     <link href='http://fonts.googleapis.com/css?family=Lato:400,300' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="public/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 
 </head>
 
-<body ng-app="ndApp" ng-controller="ndCtrl">
+<body ng-app="ndApp" ng-controller="HomeController">
 
   <header ng-include="'views/header.html'" id="globalHeader"></header>
 
