Added contact controller in main app, which was apparently missing.

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -29,6 +29,7 @@
   <script src="js/controllers/HomeCtrl.js"></script>
   <script src="js/controllers/EmployeesCtrl.js"></script>
   <script src="js/controllers/ServicesCtrl.js"></script>
+  <script src="js/controllers/ContactCtrl.js"></script>
   <script src="js/services/adminServices.js"></script>
   <script src="js/appRoutes.js"></script>
   <script src="js/app.js"></script>
